RESOLVED FIXED125675
WebCrypto wrapKey operation doesn't check key usage
https://bugs.webkit.org/show_bug.cgi?id=125675
Summary WebCrypto wrapKey operation doesn't check key usage
Alexey Proskuryakov
Reported 2013-12-12 21:05:15 PST
It should.
Attachments
proposed fix (10.72 KB, patch)
2013-12-12 21:27 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2013-12-12 21:27:13 PST
Created attachment 219149 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-12-13 00:53:27 PST
Note You need to log in before you can comment on or make changes to this bug.